# travyboard-mirror

./: .gitignore  .gitmodules  README.md
.forgejo/workflows/: build.yaml
.github/workflows/: build.yaml
firmware/: CMakeLists.txt  flash-pico.sh
firmware-v2/: CMakeLists.txt  flash-pico.sh
firmware-v2/src/: CMakeLists.txt
firmware-v2/src/core/: CMakeLists.txt  debounce.c  debounce.h  keyboard.c  keyboard.h  keymap_processing.c  keymap_processing.h  matrix.c  matrix.h  receiver.cpp  sender.cpp
firmware-v2/src/core/matrix/: matrix.c  matrix.h  matrix_single.c  matrix_split.c
firmware-v2/src/devices/: CMakeLists.txt
firmware-v2/src/devices/left_half/: CMakeLists.txt  left_half.c
firmware-v2/src/devices/right_half/: CMakeLists.txt  right_half.c
firmware-v2/src/keymaps/: CMakeLists.txt  keymap.c  keymap.h  keymap_assembler.c  keymap_split.c  layer_processor.c  layer_processor.h
firmware-v2/src/keymaps/keymap_files/: default.bak.c  default.bak.h  default.c  default.h  keymap_shorthands.h
firmware-v2/src/transport/: CMakeLists.txt  usb_descriptors.h
firmware-v2/src/transport/uart/: uart.c  uart.h
firmware/src/: CMakeLists.txt
firmware/src/core/: CMakeLists.txt  debounce.h  keyboard.c  keyboard.h  receiver.bak  receiver.c
firmware/src/core/matrix/: matrix.c  matrix.h  matrix_split.c
firmware/src/devices/left_half/: CMakeLists.txt  left_half.c
firmware/src/devices/right_half/: CMakeLists.txt  right_half.c
firmware/src/keyboard/: keyboard.cpp  keyboard.hpp
firmware/src/keymap/: keymap.cpp
firmware/src/keymaps/: CMakeLists.txt  keymap.h  keymap_single.c  layer_processor.c  layer_processor.h
firmware/src/keymaps/keymap_files/: default-right.c  default-right.h  right_only.c  right_only.h
firmware/src/master/: master.cpp
firmware/src/slave/: slave.cpp
firmware/src/transport/rf24/: sender.c
firmware/src/transport/uart/: uart.c  uart.h
firmware/src/tusb/: tusb.c  usb_descriptors.c
gerbers/: travyboard-B_Cu.gbl  travyboard-B_Mask.gbs  travyboard-B_Paste.gbp  travyboard-B_Silkscreen.gbo  travyboard-Edge_Cuts.gm1  travyboard-F_Cu.gtl  travyboard-F_Mask.gts  travyboard-F_Paste.gtp  travyboard-F_Silkscreen.gto  travyboard-NPTH-drl_map.gbr  travyboard-NPTH.drl  travyboard-PTH-drl_map.gbr  travyboard-PTH.drl  travyboard-job.gbrjob
pcb/: _autosave-left_pico.kicad_sch  fp-info-cache  fp-lib-table  left.kicad_sch  right.kicad_sch  sym-lib-table  travyboard-B_Cu.gbl  travyboard-B_Mask.gbs  travyboard-B_Paste.gbp  travyboard-B_Silkscreen.gbo  travyboard-Edge_Cuts.gm1  travyboard-F_Cu.gtl  travyboard-F_Mask.gts  travyboard-F_Paste.gtp  travyboard-F_Silkscreen.gto  travyboard-job.gbrjob  travyboard.kicad_dru  travyboard.kicad_pcb  travyboard.kicad_prl  travyboard.kicad_pro  travyboard.kicad_sch
pcb/models/: Kailh Hotswap MX.step
pcb/symbols/kbd-3-final/kicad-footprints/kbd.pretty/: Breakaway_Tabs.kicad_mod  CherryMX_Hotswap.kicad_mod
pcb/symbols/mouse-bite.pretty/: README.md
pcb/symbols/rp2040-zero/: Andrews-symbols.kicad_sym
pcb/symbols/rp2040-zero/Andrews-Custom.pretty/: RP2040-Zero.kicad_mod
pcb/symbols/trs.pretty/: CUI_SJ-3501-SMT-TR.kicad_mod  SJ-3501-SMT-TR.kicad_sym  SJ-3501-SMT-TR.step
stls/: Bottom.stl  Case - Top.stl
